# vrm_test_tool

./: .gitignore  CMakeLists.txt  README.md  app.py  requirements.txt  rtsp_server_with_meta.cpp  start.sh  sync_protos.sh  verify_endpoints.py
backend/: main.py  requirements.txt
backend/routers/: clip.py  health.py  recording.py  snapshot.py  websocket.py
backend/schemas/: models.py
backend/services/: grpc_client.py
frontend/: .env.development  TODO_UI_REFACTORING.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/api/: client.ts  recording.ts  snapshot_receiver.ts
frontend/src/components/: Button.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  FloatingPanel.tsx  FormField.tsx  Layout.tsx  Modal.tsx  SpaceBackground.tsx  StatCard.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/hooks/: useId3Metadata.ts  useMpegtsPlayer.ts  useRecordings.ts  useToast.ts
frontend/src/pages/: DashboardPage.tsx  LivePage.tsx  MultiSnapshotPage.tsx  PlaylistPage.tsx  SyncViewerPage.tsx  TesterPage.tsx
frontend/src/pages/live/: LiveCell.tsx  (+1 more)
frontend/src/types/: media.ts  recording.ts
frontend/src/utils/: format.ts
protos/: CMakeLists.txt
snapshot_receiver/: __init__.py  __main__.py  config.py  main.py  models.py  queue_manager.py  receiver.py  requirements.txt  writer.py
static/: dashboard.js  live.js  playlist.js  script.js  style.css
templates/: dashboard.html  index.html  live.html  playlist.html
test_runner/: __init__.py  grpc_client.py  scenarios.py
(+11 files in other folders)
